// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`League users API GET /leagues/:leagueId/users should return list of users 1`] = `
Array [
  Object {
    "testdata": "shared",
  },
]
`;

exports[`League users API GET /user-payments/1 should return 200 when user is in db 1`] = `
Object {
  "testData": "shared",
}
`;

exports[`League users API PUT /leagues/:leagueId/users should return 200 and creates new user if does not exist already 1`] = `
Object {
  "paid": true,
}
`;

exports[`League users API PUT /leagues/:leagueId/users should return 204 1`] = `Object {}`;
